# FastAPI-Quick-Starter

./: .env.ci  .env.local  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  initialize.py  pyproject.toml
backend/src/models/pydantic/: password_request.py
backend/src/routers/email_templates/: password_change_request_template.html
database/: env.py
src/: main.py
src/config/: settings.py
src/core/: database.py  dependencies.py  email.py  security.py  utils.py
src/managers/: users.py  utils.py
src/models/orm/: roles.py  user.py
src/models/pydantic/: role.py  user.py
src/routers/: user.py
src/routers/email_templates/: invite_user_template.html
src/tests/: conftest.py
src/tests/core/: test_api_core.py
src/tests/models/: conftest.py  test_user_model.py
src/tests/routers/: conftest.py  test_user_router.py  test_user_routes.py
